@@ -5,6 +5,9 @@ Changelog
 4.3.1 (unreleased)
 ------------------
 
+- CSRF: Also allow writes to context portlet assignments.
+  [lgraf]
+
 - CSRF: Detect redirect loops on @@confirm-action view and
   break them if necessary.
   [lgraf]
